# QUASI88

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  Makefile  README.md
.github/obsolute/: Linux_arm64.yml  Linux_arm64_AppImage.yml  Linux_x86_64.yml  Linux_x86_64_AppImage.yml  RaspberryPiOS_armhf.yml
.github/workflows/: Linux.yml  RaspberryPi.yml  RaspberryPiOS_armhf.yml  Windows.yml  Windows_x86.yml  Windows_x86_x64_arm64.yml  linux.yml  macOS.yml  macOS_Universal.yml  macos.yml  windows.yml
doc/: build-unix.txt  build-win.txt  faq.txt  history.txt  manual.txt  quasi88.txt
src/: control.c  debug.c  debug.h  emu.c  emu.h  fname.c  getconf.c  help.h  menu.c  menu.h  monitor.c  monitor.h  pause.c  pause.h  quasi88.c  quasi88.h  version.h
src/mon/: mon-arg.c  mon-arg.h  mon-cmd.c  mon-cmd.h  mon-debug.c  mon-image.c  mon-memory.c  mon-misc.c  mon-set.c  mon-util.c
src/osdepend/classic/: file-op.c
src/osdepend/dummy/: file-op.c
src/osdepend/unix/: file-op.c
src/osdepend/win/: QUASI88.rc  file-op.c
src/pc88/: basic.c  crtcdmac.c  fdc.c  intr.c  intr.h  keyboard.c  keyboard.h  memory.c  memory.h  pc88main.c  pc88main.h  pc88sub.c  pc88sub.h  pio.c  suspend.h  z80-code.h  z80-codeCB.h  z80-codeED.h  z80-codeXX.h  z80-codeXXCB.h  z80-debug.c  z80.c  z80.h
src/screen/: putimage.c  screen.c  screen.h
src/snddrv/xmame-old/src/: sndintrf.c
src/snddrv/xmame/quasi88/: 2608fmgen.cpp  mame-quasi88.c
src/snddrv/xmame/src/: sound.c
src/sysdepend/: event.h
src/sysdepend/sdl/: config.h  graph.c
src/sysdepend/sdl2/: config.h  graph.c  touchkey-layout.h  touchkey.c
src/tk/: q8tk.h
src/tk/q8tk/: q8tk-combo.c  q8tk-fselection.c  q8tk-signal.c
src/ui/: askopenfile-top.c  askquit-top.c  askreset-top.c  askselectdisk-top.c  askspeedup-top.c  askstatefile-top.c  menu-top-message.h  menu-top.c  pause-top.h  toolbar-bmp.c  toolbar.c  toolbar.h
src/ui/menu/: menu-common.c  menu-cpu-message.h  menu-cpu.c  menu-graph-message.h  menu-graph.c  menu-graph.h  menu-key-message.h  menu-misc.c  menu-reset.c  menu-reset.h
